Fix installation for systems without Go - add pre-built binaries and improved install scripts

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -21,6 +21,4 @@ command: ${HELM_PLUGIN_DIR}/bin/helm-safe
 
 platformHooks:
   install:
-    - command: ${HELM_PLUGIN_DIR}/scripts/install.sh
-  update:
-    - command: ${HELM_PLUGIN_DIR}/scripts/install.sh
+    - command: ${HELM_PLUGIN_DIR}/scripts/install-simple.sh
