--- a/plugin.yaml
+++ b/plugin.yaml
@@ -21,4 +21,4 @@ command: ${HELM_PLUGIN_DIR}/bin/helm-safe
 
 platformHooks:
   install:
-    - command: ${HELM_PLUGIN_DIR}/scripts/install-simple.sh
+    - command: ${HELM_PLUGIN_DIR}/scripts/install-build-first.sh
