--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v6
       with:
-        go-version: '1.25'
+        go-version: '1.21'
     
     - name: Build for all platforms
       run: make cross-build
@@ -26,17 +26,24 @@ jobs:
     - name: Package binaries
       run: |
         mkdir -p dist
+        ls -la bin/
         for binary in bin/helm-safe-*; do
+          echo "Processing: $binary"
           if [[ "$binary" == *".exe" ]]; then
             # Windows binary
             platform=$(basename "$binary" .exe | sed 's/helm-safe-//')
+            echo "Creating Windows archive: helm-safe-${platform}.tar.gz"
             tar czf "dist/helm-safe-${platform}.tar.gz" -C bin "$(basename "$binary")"
           else
-            # Unix binary
+            # Unix binary - create as 'helm-safe' inside archive for consistency
             platform=$(basename "$binary" | sed 's/helm-safe-//')
-            tar czf "dist/helm-safe-${platform}.tar.gz" -C bin "$(basename "$binary")"
+            echo "Creating Unix archive: helm-safe-${platform}.tar.gz"
+            cp "$binary" "bin/helm-safe"
+            tar czf "dist/helm-safe-${platform}.tar.gz" -C bin "helm-safe"
           fi
         done
+        echo "Generated archives:"
+        ls -la dist/
     
     - name: Create Release
       uses: softprops/action-gh-release@v2
