--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,12 @@ jobs:
       with:
         go-version: '1.21'
     
+    - name: Update plugin.yaml version
+      run: |
+        VERSION=$(cat VERSION)
+        sed -i "s/^version: .*/version: $VERSION/" plugin.yaml
+        echo "Updated plugin.yaml to version: $VERSION"
+        
     - name: Build for all platforms
       run: make cross-build
     
