Fix binary packaging and bump to v1.2.0
🔧 Binary Packaging Fixes:
- Fix issue where binary overwrites caused corrupted tar.gz files
- Use temporary directories for each platform-specific binary
- Add archive content verification to debug packaging issues
- Should fix 'Failed to extract or verify binary from tar.gz' errors

📦 Platform Support:
- Ensures each platform gets correctly packaged binary
- Fixes ARM64 macOS and ARM Raspberry Pi download issues
- Proper GOARM=7 support for 32-bit ARM systems

🏷️ Version Bump:
- Bump version to 1.2.0 (major packaging and compatibility fixes)
- Auto-sync plugin.yaml version from VERSION file during build

This should resolve the binary download failures on both macOS ARM64
and Raspberry Pi ARM systems, eliminating the fallback to source compilation.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,12 +44,20 @@ jobs:
             # Unix binary - create as 'helm-safe' inside archive for consistency
             platform=$(basename "$binary" | sed 's/helm-safe-//')
             echo "Creating Unix archive: helm-safe-${platform}.tar.gz"
-            cp "$binary" "bin/helm-safe"
-            tar czf "dist/helm-safe-${platform}.tar.gz" -C bin "helm-safe"
+            # Create a temporary directory for this specific binary
+            mkdir -p "temp-${platform}"
+            cp "$binary" "temp-${platform}/helm-safe"
+            tar czf "dist/helm-safe-${platform}.tar.gz" -C "temp-${platform}" "helm-safe"
+            rm -rf "temp-${platform}"
           fi
         done
         echo "Generated archives:"
         ls -la dist/
+        echo "Verifying archive contents:"
+        for archive in dist/*.tar.gz; do
+          echo "--- Contents of $archive ---"
+          tar -tzf "$archive"
+        done
     
     - name: Create Release
       uses: softprops/action-gh-release@v2
