Add comprehensive ARM debugging and detection improvements
🔧 Build Debug Information:
- Add detailed build output showing Go version and environment
- Show file sizes and compilation details for each platform
- Include both GOARM=7 and GOARM=6 builds for better compatibility

🍓 Enhanced ARM Detection:
- Add debug output showing uname, /proc/version, /proc/cpuinfo
- Detect Raspberry Pi hardware even under x86_64 emulation (QEMU)
- Check for ARM userland indicators in emulated environments
- Add fallback from linux-arm to linux-armv6 when download fails

🎯 QEMU/Container Support:
- Handle Docker containers with ARM userland on x86_64 kernels
- Detect Raspberry Pi hardware signatures in /proc/cpuinfo
- Force ARM architecture when ARM indicators found

This should resolve ARM binary issues in various deployment scenarios
including native Pi, Docker containers, and emulated environments.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,12 @@ jobs:
         echo "Updated plugin.yaml to version: $VERSION"
         
     - name: Build for all platforms
-      run: make cross-build
+      run: |
+        echo "=== Build Environment ==="
+        go version
+        go env GOOS GOARCH
+        echo "========================="
+        make cross-build
     
     - name: Package binaries
       run: |
