Add comprehensive version management and sync system
🔄 Version Consistency:
- Add check-version target to verify VERSION and plugin.yaml match
- Add sync-version target to automatically sync versions
- Update bump-patch to automatically sync after version bump
- Add version verification to cross-build process

🔧 GitHub Actions Integration:
- Replace manual sed with proper version sync system
- Verify versions before building releases
- Automatic sync if versions are out of sync

🛠️ Developer Experience:
- Add help target documenting all available commands
- Clear error messages when versions are mismatched
- Simple 'make sync-version' to fix version drift

📋 Available Commands:
- make check-version  # Verify versions match
- make sync-version   # Sync plugin.yaml ← VERSION
- make bump-patch     # Increment + sync automatically
- make help           # Show all available targets

✅ Current Status: Both files now at v1.2.3

This eliminates the version confusion we've been experiencing
and ensures plugin.yaml and VERSION are always consistent.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,11 +20,14 @@ jobs:
       with:
         go-version: '1.21'
     
-    - name: Update plugin.yaml version
+    - name: Verify and sync versions
       run: |
-        VERSION=$(cat VERSION)
-        sed -i "s/^version: .*/version: $VERSION/" plugin.yaml
-        echo "Updated plugin.yaml to version: $VERSION"
+        echo "Checking version consistency..."
+        make check-version || {
+          echo "Versions are out of sync. Syncing..."
+          make sync-version
+          echo "Versions synchronized."
+        }
         
     - name: Build for all platforms
       run: |
